fix on firefox

--- a/index_page/css/main.css
+++ b/index_page/css/main.css
@@ -413,7 +413,7 @@ body {
     padding-bottom: 10px;
   }
   .text-over-video{
-    padding: 9% 0 33% 27%;
+    padding: 9% 0 35% 27%;
     height: 90%;
   }
   .arrow{
